@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-06-03T08:18:10Z",
-  "count" : 7,
-  "count_minmax" : [ 6, 13 ],
-  "count_decinc" : [ -6, +13 ],
-  "uniques" : 6,
+  "timestamp" : "2022-06-03T16:21:01Z",
+  "count" : 5,
+  "count_minmax" : [ 5, 13 ],
+  "count_decinc" : [ -8, +13 ],
+  "uniques" : 5,
   "uniques_minmax" : [ 5, 10 ],
-  "uniques_decinc" : [ -4, +10 ]
+  "uniques_decinc" : [ -5, +10 ]
 }
