@@ -1,11 +1,11 @@
 {
-  "count": 22,
+  "count": 20,
   "uniques": 8,
   "clones": [
     {
       "timestamp": "2022-05-20T00:00:00Z",
-      "count": 7,
-      "uniques": 6
+      "count": 5,
+      "uniques": 5
     },
     {
       "timestamp": "2022-05-21T00:00:00Z",
