@@ -1,3 +1,10 @@
+2022-06-03T16:21:01Z:
+* notice: last 14d: unq all: 8 20
+* notice: prev accum: outdated-unq outdated-all / unq all: 178 278 / 194 300
+* notice: next accum: outdated-unq outdated-all / unq all: 178 278 / 193 298
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -1 -2 / +10 +13 -5 -8 / 5 5
+* notice: removed / changed dates: [] / [2022-05-20]
+
 2022-06-03T08:18:10Z:
 * notice: last 14d: unq all: 8 22
 * notice: prev accum: outdated-unq outdated-all / unq all: 178 278 / 197 305
